# greenference-node

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
images/diffusion/: server.py
infra/docker/: entrypoint.sh
services/node-agent/: pyproject.toml
services/node-agent/src/greencompute_node_agent/: config.py  main.py  runtime_server.py
services/node-agent/src/greencompute_node_agent/application/: services.py
services/node-agent/src/greencompute_node_agent/domain/: attestation.py  disk.py  gpu_allocator.py  gpu_docker.py  inference.py  model_backend.py  pod.py  pod_stats.py  ssh.py  telemetry.py  vm.py  volume.py
services/node-agent/src/greencompute_node_agent/infrastructure/: repository.py
services/node-agent/src/greencompute_node_agent/transport/: routes.py  security.py
services/node-agent/src/greenference_node_agent/: config.py  main.py
services/node-agent/src/greenference_node_agent/application/: services.py
services/node-agent/src/greenference_node_agent/domain/: gpu_docker.py  inference.py  pod.py  templates.py
services/node-agent/src/greenference_node_agent/transport/: routes.py
