[project]
name = "greencompute-node-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "greencompute-protocol",
]

[project.optional-dependencies]
k8s = ["kubernetes>=28.0,<29.0"]
inference = ["transformers>=4.35,<5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greencompute_node_agent"]
